--- a/app/views/docs/email-and-sms-templates.phtml
+++ b/app/views/docs/email-and-sms-templates.phtml
@@ -27,7 +27,7 @@
     <li>Update the email template fields and click **Update** to save your changes.</li>
 </ol>
 <h2><a href="#email-templates" id="email-templates">Email Templates</a></h2>
-<p>You can customize the email emplates for account verification, magic-url authentication, password resets, and user invites.</p>
+<p>You can customize the email templates for account verification, magic-url authentication, password resets, and user invites.</p>
 <h3><a href="#email-template-components" id="email-template-components">Email Template Components</a></h3>
 <p>Each email templates has the following components that you can customize.</p>
 <table class="full text-size-small">
@@ -44,11 +44,11 @@
     </tr>
     <tr>
         <td>Sender email</td>
-        <td>Readers will see this as the displayed email of the sender. This must be a valid email for the SMTP provider your configured.</td>
+        <td>Readers will see this as the displayed email of the sender. This must be a valid email for the SMTP provider you've configured.</td>
     </tr>
     <tr>
         <td>Reply to</td>
-        <td>Readers will reply to this email adress instead of the sender address. You can leave this field empty if unused.</td>
+        <td>Readers will reply to this email address instead of the sender address. You can leave this field empty if unused.</td>
     </tr>
     <tr>
         <td>Subject</td>
@@ -77,7 +77,7 @@
     </tr>
     <tr>
         <td><code>{{team}}</code></td>
-        <td>Thee project team's name.</td>
+        <td>The project team's name.</td>
     </tr>
     <tr>
         <td><code>{{user}}</code></td>
@@ -104,7 +104,7 @@
 
 &ltbody style="direction: ltr"&gt
 
-&ltdiv style="max-width:650px; word-wrap: break-wrod; overflow-wrap: break-word;
+&ltdiv style="max-width:650px; word-wrap: break-word; overflow-wrap: break-word;
   word-break: break-all; margin:0 auto;"&gt
     &lttable style="margin-top: 32px"&gt
         &lttr&gt
@@ -143,7 +143,7 @@
 </div>
 
 <h2><a href="#sms-templates" id="sms-templates">SMS Templates</a></h2>
-<p>You can customize the SMS emplates used for phone verification and login.</p>
+<p>You can customize the SMS templates used for phone verification and login.</p>
 <h3><a href="#sms-template-components" id="sms-template-components">SMS Template Components</a></h3>
 <table class="full text-size-small">
     <thead>
@@ -184,15 +184,15 @@
     <pre class="line-numbers"><code class="prism language-html" data-prism>Your account verification code is {{token}}</code></pre>
 </div>
 
+<h2><a href="#localization" id="localization">Localization</a></h2>
 
-<h2>Localization</h2>
 <p>
     Each template can have multiple supported locales, displayed in different format and language. 
     This can be configured under the <b>Template language</b> selector of each template.
 </p>
 
 <p>
-    You can send messages in different localizations by settling locale with <code>client.setLocale()</code> in the SDKs or the <code>X-Appwrite-Locale</code> HTTP header.
+    You can send messages in different localizations by setting the locale with <code>client.setLocale()</code> in the SDKs or the <code>X-Appwrite-Locale</code> HTTP header.
 </p>
 
 <p>For example, you can send a phone verification in French.</p>
