--- a/app/views/docs/functions-develop.phtml
+++ b/app/views/docs/functions-develop.phtml
@@ -1602,7 +1602,7 @@ namespace runtime {
     <tr>
         <td><b>Deno</b></td>
         <td><a href="https://deno.land/" target="_blank">deno</a></td>
-        <td><code>deno cache</code></td>
+        <td><code>deno cache [ENTRYPOINT_FILE]</code></td>
     </tr>
     <tr>
         <td><b>Dart</b></td>
