--- a/app/views/docs/migrations-firebase.phtml
+++ b/app/views/docs/migrations-firebase.phtml
@@ -58,7 +58,7 @@
     Click on <b>Service Accounts</b>, then click on the <b>Manage service account permissions</b> link redirecting you to the Google Cloud Console.
   </li>
   <li>
-    Click on <b>Create Service Account</b>, give it any name, id and description you want, then click <b>Continue</b>.
+    Click on <b>Create Service Account</b>, give it a name, id and description you want, then click <b>Continue</b>.
   </li>
   <li>
     Next you'll be prompted to grant the service account roles, grant the following roles:
