--- a/app/views/docs/migrations-firebase.phtml
+++ b/app/views/docs/migrations-firebase.phtml
@@ -61,7 +61,7 @@
     Click on <b>Create Service Account</b>, give it a name, id and description you want, then click <b>Continue</b>.
   </li>
   <li>
-    Next you'll be prompted to grant the service account roles, grant the following roles:
+    Next you'll be prompted to grant the service account roles. You need to grant the following roles.
   </li>
   <table>
     <thead>
