--- a/app/views/docs/migrations-firebase.phtml
+++ b/app/views/docs/migrations-firebase.phtml
@@ -73,7 +73,7 @@
     <tbody>
       <tr>
         <td>Firebase Viewer</td>
-        <td>Read access to your entire Firebase project including Database and Storage<br></td>
+        <td>Read access to your entire Firebase project including Database and Storage.<br></td>
       </tr>
       <tr>
         <td>Identity Toolkit Viewer</td>
