--- a/app/views/docs/migrations-firebase.phtml
+++ b/app/views/docs/migrations-firebase.phtml
@@ -77,7 +77,7 @@
       </tr>
       <tr>
         <td>Identity Toolkit Viewer</td>
-        <td>Read access to your users including their hash config<br></td>
+        <td>Read access to your users including their hash config.<br></td>
       </tr>
     </tbody>
   </table>
