fix some style and grammar

--- a/app/views/docs/migrations-cloud-to-local.phtml
+++ b/app/views/docs/migrations-cloud-to-local.phtml
@@ -1,5 +1,5 @@
 <p>
-    Moving to a self-hosted instance? We've got you covered. 
+    If you're moving your projects from Appwrite Cloud to self-hosted, we've got you covered. 
     Migrations makes it as easy as a couple clicks to move all of your Appwrite Cloud project data to a self-hosted instance.
 </p>
 
