--- a/app/views/docs/migrations-local-to-cloud.phtml
+++ b/app/views/docs/migrations-local-to-cloud.phtml
@@ -1,5 +1,5 @@
 <p>
-    Making the move to Appwrite Cloud? We've got your back.
+    If you're moving your self-hosted projects to Appwrite Cloud, we've got your back.
     Migrations makes it as easy as a couple clicks to move all of your self-hosted project data to a Cloud instance.
 </p>
 
