--- a/app/views/docs/functions-deploy.phtml
+++ b/app/views/docs/functions-deploy.phtml
@@ -53,7 +53,7 @@
 <h3>Deploy</h3>
 <ol class="margin-top margin-bottom-large text-size-normal">
     <li>
-        Checkout your prodction branch in Git. 
+        Checkout your production branch in Git. 
     </li>
     <li>
         Create a new commit.
