--- a/app/views/docs/functions-execute.phtml
+++ b/app/views/docs/functions-execute.phtml
@@ -434,8 +434,8 @@ $image = new View(__DIR__.'/../general/image.phtml');
     echo $image
         ->setParam('srcLight', '/images-ee/docs/functions-execute-light.png')
         ->setParam('srcDark', '/images-ee/docs/functions-execute-dark.png')
-        ->setParam('alt', '"Create Function" page.')
-        ->setParam('description', '"Create Function" page.')
+        ->setParam('alt', '"Execute Function" modal.')
+        ->setParam('description', '"Execute Function" modal.')
         ->render();
 ?>
 
