--- a/app/views/docs/migrations-cloud-to-local.phtml
+++ b/app/views/docs/migrations-cloud-to-local.phtml
@@ -20,7 +20,7 @@
 
 <h3>Steps on Your Cloud Project</h3>
 <ol class="margin-top margin-bottom-large text-size-normal">
-    <li>Navigate to your Appwrite Cloud Console and click on the <b>Migrations</b> tab.</li>
+    <li>Navigate to your Appwrite Cloud Console and click on the <b>Migrations</b> tab in <b>Project Settings</b>.</li>
     <li>Click <b>Export to Self-hosted</b>, you will be prompted to input the URL of your self-hosted Appwrite project.</li>
     <li>Optionally, tell us about why you're moving to self-hosted.</li>
     <li>After clicking <b>Continue</b>, you'll be directed back to your self-hosted project to complete the process.</li>
