--- a/app/views/docs/migrations-cloud-to-local.phtml
+++ b/app/views/docs/migrations-cloud-to-local.phtml
@@ -23,7 +23,7 @@
     <li>Navigate to your Appwrite Cloud Console and click on the <b>Migrations</b> tab in <b>Project Settings</b>.</li>
     <li>Click <b>Export to Self-hosted</b>, you will be prompted to input the URL of your self-hosted Appwrite project.</li>
     <li>Optionally, tell us about why you're moving to self-hosted.</li>
-    <li>After clicking <b>Continue</b>, you'll be directed back to your self-hosted project to complete the process.</li>
+    <li>After clicking <b>Continue</b>, you'll be redirected to your self-hosted project to complete the process.</li>
 </ol>
 
 <h3>Steps on Your Self-hosted Project</h3>
